# snb_plugin_payload_extract

./: .gitignore  Cargo.toml  README.md  config.toml.example  snb.toml
src/: auth.rs  cleanup.rs  cmd_impl.rs  commands.rs  config.rs  lib.rs  main.rs  output.rs  patch_boot.rs  payload.rs  snb_compat.rs  status.rs  tool.rs  utils.rs
src/snb_compat/: auth.rs  output.rs  status.rs
tests/unit/: auth_tests.rs  partition_tests.rs  snb_compat_tests.rs  tool_tests.rs
