[package]
name = "payload_extract_bot"
version = "0.1.2"
edition = "2024"

[dependencies]
teloxide = { version = "0.17", features = ["macros"] }
log = "0.4"
pretty_env_logger = "0.5"
tokio = { version =  "1", features = ["rt-multi-thread", "macros"] }
reqwest = { version = "0.13", features = ["json"] }
serde = { version = "1", features = ["derive"] }
toml = "1"
anyhow = "1"
zip = "8"
payload-extract = { git = "https://github.com/YuKongA/payload_extract_rs" }
bytes = "1"
regex = "1"
sysinfo = "0.38"
humantime = "2"
