[package]
name = "payload_extract_bot"
version = "0.1.3"
edition = "2024"

[workspace]

[dependencies]
teloxide = { version = "0", features = ["macros"] }
log = "0"
pretty_env_logger = "0"
tokio = { version =  "1", features = ["rt-multi-thread", "macros"] }
reqwest = { version = "0", features = ["json"] }
serde = { version = "1", features = ["derive"] }
toml = "1"
anyhow = "1"
zip = "8"
payload-extract = { git = "https://github.com/YuKongA/payload_extract_rs" }
bytes = "1"
regex = "1"
sysinfo = "0"
humantime = "2"
uuid = { version = "1", features = ["v4"] }
